fix(panel): remove truncating for summary and heading prop

--- a/src/components/calcite-panel/calcite-panel.scss
+++ b/src/components/calcite-panel/calcite-panel.scss
@@ -96,10 +96,8 @@
   .summary {
     @apply p-0
       block
-      overflow-hidden
-      whitespace-no-wrap
-      w-full;
-    text-overflow: ellipsis;
+      pointer-events-none
+      break-words;
   }
   .heading {
     @apply font-medium mt-0 mx-0 mb-1 text-0h;
